2015-09-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.2 released.

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Fix Windows short-cut to encode server.

	* Version 2.3.1 released.

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.2.1 released.

2015-09-03  c.hetherington  <cth@carlh.net>

	* Quicker, though slightly less safe,
	check for existing picture data; go back
	from the last frame written until we
	find a good one rather than going
	through from the beginning until we find
	a bad one (#519, #504).

	* Add frame counter to progress
	when transcoding (#111).

	* Add button to export certificates
	from the configuration (#668).

	* Add option to always analyse audio
	and put the peak value into the audio
	tab so it's easy to see (#673).

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.2.0 released.

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.65 released.

2015-09-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.64 released.

2015-09-12  Carl Hetherington  <cth@carlh.net>

	* Several fixes to SMPTE subtitle syntax.

	* Version 2.1.63 released.

2015-09-11  Carl Hetherington  <cth@carlh.net>

	* Fix assertion failure when creating 6-channel DCPs
	using the mid-side processor.

2015-09-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.62 released.

2015-09-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.61 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.60 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 2.1.59 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.59 released.

2015-09-09  c.hetherington  <cth@carlh.net>

	* Use SRC_LINEAR when resampling for
	audio analysis to speed things up (#685).

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.58 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Actually fix missing libsamplerate