@@ -1,3 +1,8 @@
+2015-09-15  c.hetherington  <cth@carlh.net>
+
+	* Fix failure to display audio analysis
+	in some cases.
+
 2015-09-15  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.3.2 released.
